--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>David Knittel's Page</title>
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <!-- Meyer Reset -->
+    <!-- <link rel="stylesheet" href="./assets/css/reset.css" /> -->
+    <!-- jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
+    />
+    <!-- My CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
@@ -13,13 +36,14 @@
       <div class="container">
         <h2>David Knittel</h2>
         <nav>
-          
+          <a href="#about-slim">About</a> <a href="#">Portfolio</a>
+          <a href="#">Contact</a>
         </nav>
       </div>
     </header>
 
     <div class="container">
-      <div id="about-slim">
+      <div id="about">
         <div id="about-header">
           <img id="profile-pic" src="./assets/images/dave.jpg" />
           <h1 id="main-heading">
@@ -27,7 +51,57 @@
             hunger for knowledge.
           </h1>
         </div>
+        <div id="about-basic">
+          <h2 class="about">About Me</h2>
+          <p class="about">
+            <span class="placeholder">&nbsp;</span> I am a Full-Stack Developer
+            with a passion for creating user-friendly, functional tools that
+            address real-world problems. I am proficient at using HTML, CSS, and
+            Javascript to create complete dynamic web-pages with complex
+            functionality and precise positioning. I am detail- oriented and
+            well organized. These qualities helped me to succeed in earning both
+            a Bachelor of Science in Mathematics and a Bachelor of Arts in
+            chemistry in my four years at the University of Kansas. It is my
+            lifelong passion for mathematics that drew me towards computer
+            programming. I believe that writing code and practicing mathematics
+            require very similar skill sets. My experience writing mathematical
+            proofs gave me an understanding of the same logical structures that
+            are used in programming. I am able to succeed in fast paced,
+            team-driven environments. I can follow directions well, or take
+            initiative where appropriate.<span class="end-placeholder">&nbsp;</span> 
+          </p>
+          <p class="about">
+            I was born and raised in Manhattan KS. After graduating high school,
+            I moved down the road to Lawrence to become a Jayhawk. In my four
+            years at the University of Kansas in Lawrence, I completed a B.S. in
+            math and a B.A. in chemistry. After graduation, I stayed in Lawrence
+            to pursue my passion for making pizzas. I then left my career in
+            pizza making to develop my skills for moving things around in a
+            warehouse. Despite the naturally rewarding nature of my careers in
+            pizza-making and general warehouse work, I have decided that it is
+            now time to pursue a new career in web development.
+            <span class="end-placeholder">&nbsp;</span>
+          </p>
+          <p class="about">
+            My interests include all things related to math, science, and music.
+            I enjoy coding because it involves the manipulation of precisely
+            defined objects and rules. Because of this, I believe that the types
+            of thought processes required to code successfully are similar to
+            those required to be good at math. I am currently working to
+            establish and sharpen my skills as a web developer. As I continue to
+            build my knowledge of web-based development, I hope to also continue
+            to expand my knowledge to include other areas of software
+            development.<span class="end-placeholder">&nbsp;</span>
+          </p>
+        </div>
+        <button type="button" id="toggle-about-basic" state="closed">
+          <span>Show More</span>
+          <i class="fas fa-arrow-down"></i>
+        </button>
       </div>
     </div>
   </body>
+
+  <!-- Linking my javascript -->
+  <script src="assets/javascript/logic.js"></script>
 </html>
