--- a/assets/documents/rpg.html
+++ b/assets/documents/rpg.html
@@ -439,7 +439,7 @@ blockquote {
 </ul>
 <h2 id="technologies-used">Technologies Used</h2>
 <ul>
-<li>jQuery (for DOM interaction and AJAX)</li>
+<li>jQuery</li>
 <li>HTML, CSS, and JavaScript</li>
 </ul>
 <h2 id="instructions-for-use">Instructions for Use</h2>
