added news scraper

--- a/index.html
+++ b/index.html
@@ -174,6 +174,67 @@
               </div>
               <div class="col-xl-6">
                 <div class="project card">
+                  <div class="card-header"><h3>NPR News Scraper</h3></div>
+                  <div class="card-body">
+                    <img src="assets/images/news_scraper.png" alt="News Scraper screenshot" />
+                  </div>
+                  <div class="card-body">
+                    When the user presses the scrape button, the app scrapes the <a href="https://www.npr.org/sections/news/">NPR news site</a> for article headlines, pictures, links, and summaries. If there are already articles in the database, the new article headlines are compared against the ones in the database to prevent duplicates and up to 8 new articles are saved in the database. The article information is displayed along with a link to the article and a comment section. The comment section is contained in a modal. The comments for the chosen article are retrieved from the database when the modal is opened.
+                  </div>
+                  <div class="card-body">
+                    <h6>My Role</h6>
+                    Sole developer.
+                  </div>
+                  <div class="card-body">
+                    <h6>Technologies Used</h6>
+                    <div class="row">
+                      <div class="col-6">
+                        <label>Front End</label>
+                        <ul>
+                          <li><a href="https://handlebarsjs.com/" target="_blank">
+                            Handlebars</a></li>
+                          <li><a href="https://getbootstrap.com/" target="_blank">
+                            Bootstrap</a></li>
+                          <li><a href="https://jquery.com/" target="_blank">
+                            jQuery</a></li>
+                        </ul>
+                      </div>
+                      <div class="col-6">
+                        <label>Back End</label>
+                        <ul>
+                          <li><a href="https://nodejs.org/en/about/" target="_blank">
+                            Node</a></li>
+                          <li><a href="https://expressjs.com/" target="_blank">
+                            Express</a></li>
+                          <li><a href="https://www.mongodb.com/what-is-mongodb/" target="_blank">
+                            MongoDB</a></li>
+                          <li><a href="https://mongoosejs.com/" target="_blank">
+                            Mongoose</a></li>
+                          <li><a href="https://www.npmjs.com/package/axios/" target="_blank">
+                            Axios</a></li>
+                          <li><a href="https://github.com/cheeriojs/cheerio#readme/" target="_blank">
+                            Cheerio</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-footer">
+                    <div class="btn-group" role="group" aria-label="links">
+                      <a href="https://github.com/djknit/news-scraper/" class="btn btn-secondary" target="_blank">
+                        <span>Repository</span>
+                      </a>
+                      <a href="https://fathomless-dusk-98996.herokuapp.com/" class="btn btn-secondary" target="_blank">
+                        <span>Deployed<br>Page</span>
+                      </a>
+                      <a href="./assets/documents/news-scraper.html" class="btn btn-secondary" target="_blank">
+                        <span>Readme</span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-6">
+                <div class="project card">
                   <div class="card-header"><h3>Eat-da-Burger</h3></div>
                   <div class="card-body">
                     <img src="assets/images/burger.png" alt="Eat-da-Burger screenshot" />
