fixed cheerio link to github readme

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                             Mongoose</a></li>
                           <li><a href="https://www.npmjs.com/package/axios/" target="_blank">
                             Axios</a></li>
-                          <li><a href="https://github.com/cheeriojs/cheerio#readme/" target="_blank">
+                          <li><a href="https://github.com/cheeriojs/cheerio#readme" target="_blank">
                             Cheerio</a></li>
                         </ul>
                       </div>
