favicon and fixed link

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>David Knittel's Page</title>
     <!-- Bootstrap -->
@@ -179,7 +180,7 @@
                     <img src="assets/images/news_scraper.png" alt="News Scraper screenshot" />
                   </div>
                   <div class="card-body">
-                    When the user presses the scrape button, the app scrapes the <a href="https://www.npr.org/sections/news/">NPR news site</a> for article headlines, pictures, links, and summaries. If there are already articles in the database, the new article headlines are compared against the ones in the database to prevent duplicates and up to 8 new articles are saved in the database. The article information is displayed along with a link to the article and a comment section. The comment section is contained in a modal. The comments for the chosen article are retrieved from the database when the modal is opened.
+                    When the user presses the scrape button, the app scrapes the <a href="https://www.npr.org/sections/news/" target="_blank">NPR news site</a> for article headlines, pictures, links, and summaries. If there are already articles in the database, the new article headlines are compared against the ones in the database to prevent duplicates and up to 8 new articles are saved in the database. The article information is displayed along with a link to the article and a comment section. The comment section is contained in a modal. The comments for the chosen article are retrieved from the database when the modal is opened.
                   </div>
                   <div class="card-body">
                     <h6>My Role</h6>
