updated news scraper link

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                       <a href="https://github.com/djknit/news-scraper/" class="btn btn-secondary" target="_blank">
                         <span>Repository</span>
                       </a>
-                      <a href="https://fathomless-dusk-98996.herokuapp.com/" class="btn btn-secondary" target="_blank">
+                      <a href="https://daves-news-scraper.herokuapp.com/" class="btn btn-secondary" target="_blank">
                         <span>Deployed<br>Page</span>
                       </a>
                       <a href="./assets/documents/news-scraper.html" class="btn btn-secondary" target="_blank">
