--- a/index.html
+++ b/index.html
@@ -114,6 +114,76 @@
             <div class="row">
               <div class="col-xl-6">
                 <div class="project card">
+                  <div class="card-header"><h3>Cerebellum</h3></div>
+                  <div class="card-body">
+                    <img src="assets/images/cerebellum.png" alt="Cerebellum screenshot" />
+                  </div>
+                  <div class="card-body">
+                    A social network dedicated to the sharing and building of knowledge. Users can post ideas and article links, search for other users, and save posts to their personal Knowledge Base. Standard social media features such as commenting on posts, editing and deleting posts, and creating a profile with a profile picture are available.
+                  </div>
+                  <div class="card-body">
+                    <h6>My Role</h6>
+                    Part of a four person team. I was responsible for user authentication with Passport.js, Express server setup, MongoDB setup, database controllers, API routes, and mobile responsiveness. 
+                  </div>
+                  <div class="card-body">
+                    <h6>Technologies Used</h6>
+                    <div class="row">
+                      <div class="col-6">
+                        <label>Front End</label>
+                        <ul>
+                          <li><a href="https://vuejs.org/" target="_blank">
+                            Vue</a></li>
+                          <li><a href="https://getbootstrap.com/" target="_blank">
+                            Bootstrap</a></li>
+                          <li><a href="https://nodejs.org/en/about/" target="_blank">
+                            Node</a></li>
+                          <li><a href="https://www.npmjs.com/package/axios/" target="_blank">
+                            Axios</a></li>
+                          <li><a href="https://baianat.github.io/vee-validate/" target="_blank">
+                            VeeValidate</a></li>
+                          <li><a href="https://zhanziyang.github.io/vue-croppa/#/" target="_blank">
+                            Vue Croppa</a></li>
+                            
+                          </ul>
+                      </div>
+                      <div class="col-6">
+                        <label>Back End</label>
+                        <ul>
+                          <li><a href="http://www.passportjs.org/" target="_blank">
+                            Passport.js</a></li>
+                          <li><a href="https://nodejs.org/en/about/" target="_blank">
+                            Node</a></li>
+                          <li><a href="https://expressjs.com/" target="_blank">
+                            Express</a></li>
+                          <li><a href="https://www.mongodb.com/what-is-mongodb/" target="_blank">
+                            MongoDB</a></li>
+                          <li><a href="https://mongoosejs.com/" target="_blank">
+                            Mongoose</a></li>
+                          <li><a href="https://www.npmjs.com/package/axios/" target="_blank">
+                            Axios</a></li>
+                          <li><a href="https://nodemailer.com/about/" target="_blank">
+                            Nodemailer</a></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-footer">
+                    <div class="btn-group" role="group" aria-label="links">
+                      <a href="https://github.com/huntertrammell/Dev-Social-Network/" class="btn btn-secondary" target="_blank">
+                        <span>Repository</span>
+                      </a>
+                      <a href="https://cerebellum-network.herokuapp.com/" class="btn btn-secondary" target="_blank">
+                        <span>Deployed<br>Page</span>
+                      </a>
+                      <a href="./assets/documents/cerebellum.html" class="btn btn-secondary" target="_blank">
+                        <span>Readme</span>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xl-6">
+                <div class="project card">
                   <div class="card-header"><h3>Expense</h3></div>
                   <div class="card-body">
                     <img src="assets/images/expense.png" alt="Expense screenshot" />
