--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <a href="#about">About</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
+          <a href="./assets/documents/Resume-David-Knittel.pdf" target="_blank">Resume</a>
         </nav>
       </div>
     </header>
