contact section updates

--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
             <a href="mailto:djknit@gmail.com" class="contact-method">
               <p>Send me an e-mail:</p>
               <img src="assets/images/email.png" alt="Email symbol" />
+              <p>djknit@gmail.com</p>
             </a>
             <a href="https://www.linkedin.com/in/david-knittel-675a20167/" class="contact-method" target="_blank">
               <p>Or visit my</p>
@@ -509,7 +510,12 @@
             </a>
             <a href="tel:+1-785-410-5644" class="contact-method">
               <p>Call or text</p>
-              <span>(785) 410-5644</span>
+              <span><i class="fas fa-phone"></i></span>
+              <p>(785) 410-5644</p>
+            </a>
+            <a href="assets/documents/Resume-David-Knittel.pdf" class="contact-method">
+              <p>Download my</p>
+              <span>Resume</span>
             </a>
           </div>
         </div>
